--- a/styles/globals.css
+++ b/styles/globals.css
@@ -158,7 +158,7 @@ nav ul li {
   max-width: 250px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
   background-color: var(--primary-color);
   padding: 1rem; 
   border-radius: 30px;
@@ -185,12 +185,15 @@ nav ul li {
 }
 
 .projects-card p{ 
-  color:rgb(255, 255, 255)
+  color:rgb(255, 255, 255);
+  margin: 0px;
 }
+
+
 
 .projects-card a{
   display: inline-block;
-  margin-top: auto;
+  margin-top: .5rem;
   align-self: flex-start;
   position: relative;
   color: #ffffff;
@@ -216,6 +219,19 @@ transition: transform 0.25s ease-out;
 .projects-card a:hover::after{ 
   transform: scaleX(1);
 transform-origin: bottom left;
+}
+
+.projects-card h3 { 
+  color: white;
+  margin: 0px;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+
+}
+
+.italics{ 
+  font-style: italic;
+  padding-top: .5rem;
 }
 
 .contact{ 
