--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Calistoga&family=Montserrat&display=swap");
 
 :root {
   --font-header: 'Calistoga', cursive;
@@ -35,6 +36,26 @@ a:hover {
 body { 
   font-family: var(--font-main);
   margin: 0px;
+}
+
+body h1{ 
+  text-align: center;
+}
+
+.container { 
+  display: block; 
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 30%;
+}
+
+.container h1{ 
+  text-align: center;
+}
+
+.container div{
+  display: flex;
+  justify-content: space-between;
 }
 
 h1 { 
@@ -261,5 +282,23 @@ transform-origin: bottom left;
 
 }
 
+button{ 
+  background-color: #4C6F65;
+  font-family: var(--font-main);
+  border: 0px;
+  padding: .5rem;
+  font-size: larger;
+  border-radius: .5rem;
+}
 
+button:hover{ 
+  background-color: var(--secondary-color);
+  transition: .5s;
+}
 
+button a{
+color: white;
+}
+button a:hover{
+  color: black;
+  }
