--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,7 +29,7 @@ a {
   color: black;
 }
 
-a:hover { 
+nav a:hover { 
   color: rgba(255, 255, 255, 0.791)
 }
 
@@ -43,17 +43,18 @@ body h1{
 }
 
 .container { 
-  display: block; 
+  display: block;
+  margin-top: 4rem;
   margin-left: auto;
   margin-right: auto;
-  max-width: 30%;
+  max-width: 50%;
 }
 
 .container h1{ 
   text-align: center;
 }
 
-.container div{
+.button-container{
   display: flex;
   justify-content: space-between;
 }
@@ -98,6 +99,10 @@ nav ul li {
   font-weight: bold;
 }
 
+nav h1{ 
+  margin: 0px
+}
+
               /* **Hero Section**  */
 
 .header-background {
@@ -108,6 +113,17 @@ nav ul li {
   align-items: center;
   width: 100%;
   height: 275px;
+}
+
+.header-background-small {
+  background: url("../public/images/betterwaves.svg") no-repeat;
+  background-size: cover;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 150px;
 }
 
 .about-me-container { 
@@ -177,6 +193,7 @@ nav ul li {
 .projects-card{
   min-width: 250px;
   max-width: 250px;
+  min-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -302,3 +319,27 @@ color: white;
 button a:hover{
   color: black;
   }
+
+.blog-container{ 
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
+.blog-container img{
+
+  width: auto;
+  height: auto;
+  border-radius: .25rem;
+}
+
+.blog-img { 
+  height: 75%;
+}
+
+.blog-flex-col{
+  display: flex;
+  flex-direction: column;
+}
