--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,8 @@ body h1{
 
 .button-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 2rem;
 }
 
 h1 { 
@@ -162,7 +163,7 @@ nav h1{
   align-content: center;
   grid-gap: 2rem;
   margin-top: 2rem;
-  margin-bottom: 2;
+  margin-bottom: 2rem;
   
 
 }
